# zen-mcp-server

./: PR_SUMMARY.md  README.md  UV_MIGRATION_PLAN.md  config.py  pyproject.toml  server.py
.claude/: settings.local.json
.github/workflows/: test-uv-integration.yml
examples/: claude_desktop_uv_local.json  claude_desktop_uv_macos.json  claude_desktop_uv_windows.json  zen-config-minimal.json  zen-config-openrouter.json  zen-config-template.json
providers/: base.py  custom.py  gemini.py  openai_compatible.py  openai_provider.py  openrouter.py  openrouter_registry.py  registry.py  xai.py
simulator_tests/: base_test.py  conversation_base_test.py  log_utils.py  test_debug_certain_confidence.py  test_debug_validation.py
tests/: test_precommit_with_mock_store.py  test_uv_config.py
tools/: analyze.py  base.py  chat.py  codereview.py  consensus.py  debug.py  listmodels.py  models.py  planner.py  precommit.py  refactor.py  testgen.py  thinkdeep.py
utils/: conversation_memory.py  file_utils.py  model_context.py  model_restrictions.py  storage_backend.py
zen_mcp_server/: __init__.py  _version.py
